--- a/workspaces/game.vcxproj
+++ b/workspaces/game.vcxproj
@@ -179,6 +179,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\common\creaturePool.cpp" />
     <ClCompile Include="..\src\externallyStoredText.cpp" />
     <ClCompile Include="..\src\externallyStoredData.cpp" />
     <ClCompile Include="..\src\basemode\activate.cpp" />
@@ -194,7 +195,6 @@
     <ClCompile Include="..\src\common\commonactions.cpp" />
     <ClCompile Include="..\src\common\commondisplay.cpp" />
     <ClCompile Include="..\src\common\consolesupport.cpp" />
-    <ClCompile Include="..\src\common\equipment.cpp" />
     <ClCompile Include="..\src\common\getnames.cpp" />
     <ClCompile Include="..\src\common\help.cpp" />
     <ClCompile Include="..\src\common\misc.cpp" />
@@ -209,7 +209,6 @@
     <ClCompile Include="..\src\creature\creaturetype.cpp" />
     <ClCompile Include="..\src\creature\creaturetypes.cpp" />
     <ClCompile Include="..\src\cursesAlternative.cpp" />
-    <ClCompile Include="..\src\cursesgraphics.cpp" />
     <ClCompile Include="..\src\cursesmovie.cpp" />
     <ClCompile Include="..\src\daily\activities.cpp" />
     <ClCompile Include="..\src\daily\daily.cpp" />
@@ -219,32 +218,28 @@
     <ClCompile Include="..\src\daily\shopsnstuff.cpp" />
     <ClCompile Include="..\src\daily\siege.cpp" />
     <ClCompile Include="..\src\game.cpp" />
+    <ClCompile Include="..\src\globals.cpp" />
     <ClCompile Include="..\src\items\armor.cpp" />
     <ClCompile Include="..\src\items\armortype.cpp" />
     <ClCompile Include="..\src\items\clip.cpp" />
     <ClCompile Include="..\src\items\cliptype.cpp" />
     <ClCompile Include="..\src\items\item.cpp" />
     <ClCompile Include="..\src\items\itemtype.cpp" />
-    <ClCompile Include="..\src\items\loot.cpp" />
     <ClCompile Include="..\src\items\loottype.cpp" />
+    <ClCompile Include="..\src\items\lootTypePool.cpp" />
     <ClCompile Include="..\src\items\money.cpp" />
     <ClCompile Include="..\src\items\weapon.cpp" />
     <ClCompile Include="..\src\items\weapontype.cpp" />
     <ClCompile Include="..\src\lcsio.cpp" />
     <ClCompile Include="..\src\locations\locations.cpp" />
-    <ClCompile Include="..\src\locations\world.cpp" />
+    <ClCompile Include="..\src\locations\locationsPool.cpp" />
     <ClCompile Include="..\src\log\log.cpp" />
     <ClCompile Include="..\src\monthly\endgame.cpp" />
     <ClCompile Include="..\src\monthly\justice.cpp" />
     <ClCompile Include="..\src\monthly\lcsmonthly.cpp" />
     <ClCompile Include="..\src\monthly\monthly.cpp" />
     <ClCompile Include="..\src\monthly\sleeper_update.cpp" />
-    <ClCompile Include="..\src\news\ads.cpp" />
-    <ClCompile Include="..\src\news\headline.cpp" />
-    <ClCompile Include="..\src\news\layout.cpp" />
-    <ClCompile Include="..\src\news\majorevent.cpp" />
     <ClCompile Include="..\src\news\news.cpp" />
-    <ClCompile Include="..\src\news\squadstory_text.cpp" />
     <ClCompile Include="..\src\politics\politics.cpp" />
     <ClCompile Include="..\src\sitemode\advance.cpp" />
     <ClCompile Include="..\src\sitemode\mapspecials.cpp" />
@@ -271,28 +266,38 @@
     <ClInclude Include="..\src\basemode\reviewmode.h" />
     <ClInclude Include="..\src\cmarkup\Markup.h" />
     <ClInclude Include="..\src\combat\chase.h" />
+    <ClInclude Include="..\src\combat\chaseCreature.h" />
     <ClInclude Include="..\src\combat\fight.h" />
+    <ClInclude Include="..\src\combat\fightCreature.h" />
     <ClInclude Include="..\src\combat\haulkidnap.h" />
-    <ClInclude Include="..\src\common.h" />
+    <ClInclude Include="..\src\combat\haulkidnapCreature.h" />
     <ClInclude Include="..\src\common\commonactions.h" />
+    <ClInclude Include="..\src\common\commonactionsCreature.h" />
     <ClInclude Include="..\src\common\commondisplay.h" />
+    <ClInclude Include="..\src\common\commondisplayCreature.h" />
+    <ClInclude Include="..\src\common\commondisplayLog.h" />
     <ClInclude Include="..\src\common\consolesupport.h" />
+    <ClInclude Include="..\src\common\creaturePool.h" />
+    <ClInclude Include="..\src\common\creaturePoolCreature.h" />
     <ClInclude Include="..\src\common\equipment.h" />
     <ClInclude Include="..\src\common\getnames.h" />
     <ClInclude Include="..\src\common\help.h" />
     <ClInclude Include="..\src\common\interval.h" />
     <ClInclude Include="..\src\common\ledger.h" />
+    <ClInclude Include="..\src\common\ledgerEnums.h" />
     <ClInclude Include="..\src\common\misc.h" />
     <ClInclude Include="..\src\common\musicClass.h" />
+    <ClInclude Include="..\src\common\stringconversion.h" />
     <ClInclude Include="..\src\common\translateid.h" />
-    <ClInclude Include="..\src\compat.h" />
     <ClInclude Include="..\src\configfile.h" />
     <ClInclude Include="..\src\constant_strings.h" />
     <ClInclude Include="..\src\creature\augmentation.h" />
     <ClInclude Include="..\src\creature\augmenttype.h" />
     <ClInclude Include="..\src\creature\creature.h" />
+    <ClInclude Include="..\src\creature\creatureEnums.h" />
     <ClInclude Include="..\src\creature\creaturetype.h" />
     <ClInclude Include="..\src\cursesAlternative.h" />
+    <ClInclude Include="..\src\cursesAlternativeConstants.h" />
     <ClInclude Include="..\src\cursesgraphics.h" />
     <ClInclude Include="..\src\cursesmovie.h" />
     <ClInclude Include="..\src\customMaps.h" />
@@ -301,14 +306,18 @@
     <ClInclude Include="..\src\daily\siege.h" />
     <ClInclude Include="..\src\gui_constants.h" />
     <ClInclude Include="..\src\includes.h" />
+    <ClInclude Include="..\src\items\itemPool.h" />
+    <ClInclude Include="..\src\items\lootTypePool.h" />
+    <ClInclude Include="..\src\items\lootTypePoolItem.h" />
+    <ClInclude Include="..\src\locations\locationsEnums.h" />
+    <ClInclude Include="..\src\locations\locationsPool.h" />
+    <ClInclude Include="..\src\locations\locationsPoolVehicle.h" />
     <ClInclude Include="..\src\politics\politics.h" />
     <ClInclude Include="..\src\sitemode\advance.h" />
-    <ClInclude Include="..\src\sitemode\mapspecials.h" />
     <ClInclude Include="..\src\sitemode\miscactions.h" />
     <ClInclude Include="..\src\sitemode\sitedisplay.h" />
     <ClInclude Include="..\src\title\initfile.h" />
     <ClInclude Include="..\src\title\newgame.h" />
-    <ClInclude Include="..\src\title\saveload.h" />
     <ClInclude Include="..\src\title\titlescreen.h" />
     <ClInclude Include="..\src\vehicle\vehicle.h" />
     <ClInclude Include="..\src\vehicle\vehicletype.h" />
@@ -329,24 +338,17 @@
     <ClInclude Include="..\src\items\money.h" />
     <ClInclude Include="..\src\items\weapon.h" />
     <ClInclude Include="..\src\items\weapontype.h" />
-    <ClInclude Include="..\src\lcsio.h" />
     <ClInclude Include="..\src\locations\locations.h" />
     <ClInclude Include="..\src\log\log.h" />
-    <ClInclude Include="..\src\monthly\justice.h" />
     <ClInclude Include="..\src\monthly\lcsmonthly.h" />
     <ClInclude Include="..\src\monthly\monthly.h" />
-    <ClInclude Include="..\src\monthly\sleeper_update.h" />
-    <ClInclude Include="..\src\news\news.h" />
     <ClInclude Include="..\src\pdcurses\curses.h" />
     <ClInclude Include="..\src\set_color_support.h" />
-    <ClInclude Include="..\src\sitemode\newencounter.h" />
     <ClInclude Include="..\src\sitemode\shop.h" />
     <ClInclude Include="..\src\sitemode\sitemap.h" />
-    <ClInclude Include="..\src\sitemode\sitemode.h" />
     <ClInclude Include="..\src\sitemode\stealth.h" />
     <ClInclude Include="..\src\tinydir.h" />
     <ClInclude Include="..\src\title\highscore.h" />
-    <ClInclude Include="..\src\vector.h" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="lcs_news_icon.res" />
