Complex refactoring for 4.12.24

--- a/workspaces/game.vcxproj
+++ b/workspaces/game.vcxproj
@@ -184,22 +184,77 @@
     <ClCompile Include="..\src\externallyStoredText.cpp" />
     <ClCompile Include="..\src\externallyStoredData.cpp" />
     <ClCompile Include="..\src\basemode\activate.cpp" />
+    <ClCompile Include="..\src\basemode\activate_sleepers.cpp" />
+    <ClCompile Include="..\src\basemode\baseactions.cpp" />
+    <ClCompile Include="..\src\basemode\basemode.cpp" />
+    <ClCompile Include="..\src\basemode\liberalagenda.cpp" />
+    <ClCompile Include="..\src\basemode\reviewmode.cpp" />
     <ClCompile Include="..\src\cmarkup\Markup.cpp" />
+    <ClCompile Include="..\src\combat\chase.cpp" />
+    <ClCompile Include="..\src\combat\fight.cpp" />
+    <ClCompile Include="..\src\combat\haulkidnap.cpp" />
+    <ClCompile Include="..\src\common\commonactions.cpp" />
+    <ClCompile Include="..\src\common\commondisplay.cpp" />
     <ClCompile Include="..\src\common\consolesupport.cpp" />
+    <ClCompile Include="..\src\common\getnames.cpp" />
+    <ClCompile Include="..\src\common\help.cpp" />
+    <ClCompile Include="..\src\common\misc.cpp" />
     <ClCompile Include="..\src\common\stringconversion.cpp" />
+    <ClCompile Include="..\src\compat.cpp" />
+    <ClCompile Include="..\src\configfile.cpp" />
+    <ClCompile Include="..\src\creature\augmentation.cpp" />
+    <ClCompile Include="..\src\creature\augmenttype.cpp" />
+    <ClCompile Include="..\src\creature\creature.cpp" />
+    <ClCompile Include="..\src\creature\creaturenames.cpp" />
+    <ClCompile Include="..\src\creature\creaturetype.cpp" />
     <ClCompile Include="..\src\cursesAlternative.cpp" />
     <ClCompile Include="..\src\cursesmovie.cpp" />
+    <ClCompile Include="..\src\daily\activities.cpp" />
+    <ClCompile Include="..\src\daily\daily.cpp" />
+    <ClCompile Include="..\src\daily\date.cpp" />
+    <ClCompile Include="..\src\daily\interrogation.cpp" />
+    <ClCompile Include="..\src\daily\recruit.cpp" />
+    <ClCompile Include="..\src\daily\siege.cpp" />
+    <ClCompile Include="..\src\game.cpp" />
     <ClCompile Include="..\src\globals.cpp" />
+    <ClCompile Include="..\src\items\armor.cpp" />
+    <ClCompile Include="..\src\items\armortype.cpp" />
+    <ClCompile Include="..\src\items\clip.cpp" />
+    <ClCompile Include="..\src\items\item.cpp" />
+    <ClCompile Include="..\src\items\itemtype.cpp" />
+    <ClCompile Include="..\src\items\loottype.cpp" />
     <ClCompile Include="..\src\items\lootTypePool.cpp" />
+    <ClCompile Include="..\src\items\money.cpp" />
+    <ClCompile Include="..\src\items\weapon.cpp" />
+    <ClCompile Include="..\src\items\weapontype.cpp" />
     <ClCompile Include="..\src\lcsio.cpp" />
+    <ClCompile Include="..\src\locations\locations.cpp" />
     <ClCompile Include="..\src\locations\locationsPool.cpp" />
     <ClCompile Include="..\src\log\log.cpp" />
-    <ClCompile Include="..\src\simpleFunctions.cpp" />
+    <ClCompile Include="..\src\monthly\endgame.cpp" />
+    <ClCompile Include="..\src\monthly\justice.cpp" />
+    <ClCompile Include="..\src\monthly\lcsmonthly.cpp" />
+    <ClCompile Include="..\src\monthly\monthly.cpp" />
+    <ClCompile Include="..\src\monthly\sleeper_update.cpp" />
+    <ClCompile Include="..\src\news\news.cpp" />
+    <ClCompile Include="..\src\politics\politics.cpp" />
+    <ClCompile Include="..\src\sitemode\advance.cpp" />
     <ClCompile Include="..\src\sitemode\mapspecials.cpp" />
+    <ClCompile Include="..\src\sitemode\miscactions.cpp" />
+    <ClCompile Include="..\src\sitemode\newencounter.cpp" />
+    <ClCompile Include="..\src\sitemode\shop.cpp" />
     <ClCompile Include="..\src\sitemode\sitedisplay.cpp" />
+    <ClCompile Include="..\src\sitemode\sitemap.cpp" />
+    <ClCompile Include="..\src\sitemode\sitemode.cpp" />
+    <ClCompile Include="..\src\sitemode\stealth.cpp" />
+    <ClCompile Include="..\src\sitemode\talk.cpp" />
+    <ClCompile Include="..\src\title\highscore.cpp" />
     <ClCompile Include="..\src\title\initfile.cpp" />
+    <ClCompile Include="..\src\title\newgame.cpp" />
     <ClCompile Include="..\src\title\saveload.cpp" />
     <ClCompile Include="..\src\title\titlescreen.cpp" />
+    <ClCompile Include="..\src\vehicle\vehicle.cpp" />
+    <ClCompile Include="..\src\vehicle\vehicletype.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\basemode\activate.h" />
@@ -238,6 +293,7 @@
     <ClInclude Include="..\src\creature\creature.h" />
     <ClInclude Include="..\src\creature\creatureEnums.h" />
     <ClInclude Include="..\src\creature\creaturetype.h" />
+    <ClInclude Include="..\src\creature\newcreature.h" />
     <ClInclude Include="..\src\cursesAlternative.h" />
     <ClInclude Include="..\src\cursesAlternativeConstants.h" />
     <ClInclude Include="..\src\cursesgraphics.h" />
@@ -253,6 +309,7 @@
     <ClInclude Include="..\src\items\lootTypePoolItem.h" />
     <ClInclude Include="..\src\locations\locationsEnums.h" />
     <ClInclude Include="..\src\locations\locationsPool.h" />
+    <ClInclude Include="..\src\news\news.h" />
     <ClInclude Include="..\src\politics\politics.h" />
     <ClInclude Include="..\src\sitemode\advance.h" />
     <ClInclude Include="..\src\sitemode\miscactions.h" />
